# poppt

./: README.md  requirements.txt  setup.cfg
demo/: m4p.py  ppt2img.py
dev/: merge2ppt.py  ppt2img.py
dev/docs/: 1.pptx  2.pptx
docs/: PPT转为 1张图片.xmind
poppt/: __init__.py
poppt/api/: ppt.py
poppt/core/: PPTType.py
poppt/core/need_dev/: 2img.py
poppt/lib/ppt/: ppt2pdf_service.py
script/: allpackages.txt  clean.sh
tests/: __init__.py  test_ppt.py
tests/ppt/test_ppt_img/: test_pdf2.pptx
