[metadata]
name = poppt
version = 0.0.2
description = pip install poppt
long_description = file: README.md
long_description_content_type = text/markdown
url = http://python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/poppt/issues
    Documentation = https://github.com/CoderWanFeng/poppt/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/poppt

[options]
packages = find:
install_requires =
    pypiwin32

python_requires = >=3.7
include_package_data = True
zip_safe = False

